# M25_Acqusition_Engine

./: .gitmodules  LICENSE  README.md
M25 MBL Trigger/: MBL M25 Trigger.cywrk
M25 MBL Trigger/Camera Trigger.cydsn/: Camera Trigger.cycdx  Camera Trigger.cydwr  Camera Trigger.cyfit  Camera Trigger.cyprj  main.c  (+5 more)
M25 Python/: M25.ui  M25_2.ui  M25_Widget.ui  M25_ui.py  MeinEdits.py  app-slow-live.py  app.py
M25 Test Trigger/: ComponentUpdateLog.txt  M25 Test Trigger.cywrk  M25 Test Trigger.cywrk.AdoptedOptics  M25 Test Trigger.cywrk.Callisto  M25 Test Trigger.cywrk.Europa  M25 Test Trigger.cywrk.Mr Machine
M25 _python/: MeinEdits.py
M25_python/: LICENSE  setup.cfg  setup.py
M25_python/docs/: index.md
M25_python/m25_controls/: _dock_widget.py
M25_python/m25_controls/_tests/: test_dock_widget.py
M25_python/m25_controls/qtdesigner_layout/: m25_widget.py  m25_widget.py.old
M25_python/m25_controls/widget/: M25_widget.ui  MeinEdits.py  app.py  m25_control_widget.py  m25_control_widget.py.old  m25_widget.py  napari_entry_point.py
M25_python/m25_plugin/: __init__.py
M25_python/m25_plugin/qt5_designer/: M25_ui.py  m25_widget.py
M25_python/m25_plugin/widget/: app.py  m25_control_widget.py  napari_entry_point.py
USB_TEST/: USB_TEST.cpp  USB_TEST.sln  USB_TEST.vcxproj  USB_TEST.vcxproj.filters
m25_viewer/: README.md  mkdocs.yml  setup.py  tox.ini
winsock_adventure_client/: client.cpp  winsock_adventure_client.sln  winsock_adventure_client.vcxproj
winsock_adventure_server/: server.cpp  winsock_adventure_server.sln  winsock_adventure_server.vcxproj
(+30 files in other folders)
