[metadata]
name = m25_viewer

author = Eduardo Hirata
author_email = edhiratam@gmail.com

license = BSD-3-Clause
description = GUI to control the M25 multifocus microscopy system
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    m25_viewer = m25_controls
